--- a/scss/files/_media.scss
+++ b/scss/files/_media.scss
@@ -112,14 +112,14 @@
   }
   .navbar-nav>li {
     float: none;
-    margin: 20px 0 0;
+    margin: 20px 0;
   }
-  .navbar-nav>li>a {
+  .navbar-theme-three .navbar-nav>li>a {
     padding-top: 10px;
     padding-bottom: 10px;
     margin-bottom: 1px !important;
+    line-height: 22px;
   }
-  
   .theme-dropdown {
     margin-bottom: 8px;
   }
